--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black>=25.1.0",
     "click>=8.1.8",
+    "pyright>=1.1.400",
     "rich>=14.0.0",
     "watchgod>=0.8.2",
 ]
