--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.12.0",
     "black>=25.1.0",
     "click>=8.1.8",
     "pyright>=1.1.400",
+    "requests>=2.32.0",
     "rich>=14.0.0",
+    "urllib3>=2.2.0",
     "watchgod>=0.8.2",
 ]
