--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "black>=25.1.0",
     "click>=8.1.8",
+    "httpx>=0.24.0",
+    "isort>=6.0.1",
     "pyright>=1.1.400",
     "requests>=2.32.0",
     "rich>=14.0.0",
+    "ruff>=0.13.0",
     "urllib3>=2.2.0",
     "watchgod>=0.8.2",
 ]
